--- a/app/src/main/res/layout/list_cafes_do_evento.xml
+++ b/app/src/main/res/layout/list_cafes_do_evento.xml
@@ -15,17 +15,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <CheckBox
-                    android:id="@+id/list_listar_salas_criar_evento_check_box"
-                    android:layout_width="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/list_cafes_do_evento_nome_sala_cafe"
                     android:textStyle="bold"
+                    android:textSize="@dimen/general_titles_large"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/general_titles_large">
-                </CheckBox>
+                    android:padding="@dimen/margin_fragments_between_views">
+                </TextView>
+                <TextView
+                    android:id="@+id/list_cafes_do_evento_nome_integrantes"
+                    android:textStyle="italic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_fragments_between_views">
+                </TextView>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
