--- a/app/src/main/res/layout/list_eventos.xml
+++ b/app/src/main/res/layout/list_eventos.xml
@@ -11,51 +11,57 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border_half_black"
         tools:ignore="MissingConstraints">
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/list_eventos_card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/margin_fragments">
-            <TextView
-                android:id="@+id/list_evento_nome_evento"
-                android:textSize="@dimen/general_titles_large"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
+            android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_margin="@dimen/margin_fragments">
                 <TextView
+                    android:id="@+id/list_evento_nome_evento"
+                    android:textSize="@dimen/general_titles_large"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </TextView>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/adapter_listar_sala_title_capacidade"
-                    android:textSize="@dimen/general_titles_normal">
-                </TextView>
-                <TextView
-                    android:text="0"
-                    android:id="@+id/list_evento_capacidade_atual"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/general_titles_normal">
-                </TextView>
-                <TextView
-                    android:text="/"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/general_titles_normal">
-                </TextView>
-                <TextView
-                    android:text="0"
-                    android:id="@+id/list_evento_capacidade_maxima"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/general_titles_normal">
-                </TextView>
-            </LinearLayout>
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/adapter_listar_sala_title_capacidade"
+                        android:textSize="@dimen/general_titles_normal">
+                    </TextView>
+                    <TextView
+                        android:text="0"
+                        android:id="@+id/list_evento_capacidade_atual"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/general_titles_normal">
+                    </TextView>
+                    <TextView
+                        android:text="/"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/general_titles_normal">
+                    </TextView>
+                    <TextView
+                        android:text="0"
+                        android:id="@+id/list_evento_capacidade_maxima"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/general_titles_normal">
+                    </TextView>
+                </LinearLayout>
 
-        </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
